--- a/scss/_jspark.scss
+++ b/scss/_jspark.scss
@@ -106,15 +106,15 @@
 // }
 
 // 메인 비주얼
-.main-visual {
-  .main-visual {
-    &-bg-01 {
-      background-position: 0 50%;
-      background-image: url(../../images/renewal/main-visual-01-01@3x.png);
-      background-repeat: no-repeat;
-    }
-  }
-}
+// .main-visual {
+//   .main-visual {
+//     &-bg-01 {
+//       background-position: 0 50%;
+//       background-image: url(../../images/renewal/main-visual-01-01@3x.png);
+//       background-repeat: no-repeat;
+//     }
+//   }
+// }
 
 .content {
   height: calc(100vh - 95px);
@@ -138,9 +138,9 @@
     background-size: cover;
     background-image: url(../../images/renewal/bg-digit@2x.png);
     background-color: #12134b;
-    .float-right {
-      width: 100%;
-    }
+    // .float-right {
+    //   width: 100%;
+    // }
     .main-title {
       &--sub {
         color: #ffffff;
@@ -260,9 +260,9 @@
     .card-wrap {
       &.ci-banner {
         margin-top: rem(8px);
-        .card-item {
-          width: 20%;
-        }
+        // .card-item {
+        //   width: 20%;
+        // }
       }
     }
     .info-intro-link {
@@ -342,7 +342,7 @@
       justify-content: space-between;
       .card-item {
         flex: unset;
-        width: 20%;
+        // width: 20%;
         margin: 4.5rem 0 0 0;
         border-radius: 0;
         background-color: transparent;
